cluster/app/joplin/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: joplin
  labels:
    shared-gateway-access: "true"
