cluster/app/joplin/http-route-joplin.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: joplin
  namespace: joplin
spec:
  parentRefs:
  - name: shared-gateway
    namespace: default
  hostnames: ["joplin.une-tasse-de.cafe"]
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: joplin
      port: 80
